# doc-searcher

./: .env  .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  docker-compose-test.yml  docker-compose.yml  launch-service.sh  recipe.json  run-elastic-engine.sh  test.json
.cargo/: audit.toml
.drone/: drone.yml
.github/workflows/: create-release.yaml  create-release.yml  drone.yml  pull-request.yaml  pull-request.yml  pull-requests.yaml  pull-requests.yml  rust.yml
config/: default.toml  development.toml  production.toml
crates/datetime/: Cargo.toml
crates/elquery/: Cargo.toml
crates/elschema/: Cargo.toml
doc-search-core/: Cargo.toml
doc-search-core/docs/: create-user-role.sh  init-embeddings-pipelines.sh
doc-search-core/src/: lib.rs
doc-search-core/src/application/: mod.rs
doc-search-core/src/application/tests/: mod.rs  test_storage_usecase.rs
doc-search-core/src/application/tests/fixture/: document.rs  index.rs  mod.rs  search_params.rs
doc-search-core/src/application/tests/mock/: mod.rs  storage.rs
doc-search-core/src/application/tests/resources/: doc-content-short.txt
doc-search-core/src/application/usecase/: searcher.rs  storage.rs
doc-search-core/src/domain/searcher/: error.rs  mod.rs
doc-search-core/src/domain/searcher/models/: document.rs  mod.rs  pagination.rs  params.rs
doc-search-core/src/domain/searcher/repository/: mod.rs
doc-search-core/src/domain/searcher/tests/: mod.rs  test_params.rs
doc-search-core/src/domain/searcher/tests/fixture/: mod.rs  pagination.rs  params.rs
doc-search-core/src/domain/storage/: error.rs  mod.rs
doc-search-core/src/domain/storage/models/: document.rs  index.rs  metadata.rs  mod.rs  params.rs
doc-search-core/src/domain/storage/repository/: mod.rs
doc-search-core/src/domain/storage/tests/: mod.rs  test_document_split.rs
doc-search-core/src/domain/storage/tests/fixture/: document.rs  index.rs  mod.rs
doc-search-core/src/infrastructure/: mod.rs
doc-search-core/src/infrastructure/osearch/: config.rs  error.rs  extractor.rs  mod.rs  schema.rs
doc-search-core/src/infrastructure/osearch/dto/: document.rs  founded.rs  index.rs  metadata.rs  mod.rs  params.rs
doc-search-core/src/infrastructure/osearch/query/: mod.rs
doc-search-core/src/infrastructure/osearch/tests/: mod.rs  test_extractor.rs  test_query.rs
doc-search-core/src/infrastructure/osearch/tests/common/fixture/: mod.rs  search.rs
doc-search-core/src/infrastructure/osearch/tests/resources/: fulltext-full-query.json  fulltext-simple-query.json  hybrid-full-query.json  hybrid-simple-query.json  retrieve-full-query.json  retrieve-simple-query.json  searching-result.json  semantic-full-query.json  semantic-simple-query.json  semantic-tokens-query.json
doc-search-core/src/shared/kernel/: ids.rs  metadata.rs  mod.rs
doc-search-otlp/: Cargo.toml
doc-search-otlp/src/: config.rs  filter.rs  lib.rs
docs/: architecture.drawio
docs/opensearch/: create-user-role.json  create-user-role.sh  init-embeddings-pipelines.sh
docs/swagger/: swagger-ui  swagger-ui-create-doc  swagger-ui-fulltext.description  swagger-ui-hybrid.description  swagger-ui-semantic.description
examples/elasticsearch/: Cargo.toml
examples/own_engine/: Cargo.toml
examples/own_engine/src/: main.rs
examples/own_engine/src/services/own_engine/: context.rs  mod.rs
examples/own_engine/src/services/own_engine/clusters/: clusters.rs
examples/own_engine/src/services/own_engine/documents/: documents.rs
examples/own_engine/src/services/own_engine/folders/: folders.rs
examples/own_engine/src/services/own_engine/paginator/: paginator.rs
examples/own_engine/src/services/own_engine/searcher/: helper.rs  mod.rs  searcher.rs
examples/own_engine/src/services/own_engine/watcher/: watcher.rs
prometheus/: prometheus.yml
src/: config.rs  context.rs  cors.rs  elastic.rs  errors.rs  es_client.rs  init.rs  lib.rs  logger.rs  main.rs  meter.rs  mod.rs  service.rs  telemetry.rs  tracer.rs  wrappers.rs
src/application/: mod.rs
src/cacher/: config.rs  mod.rs
src/crates/cacher/: Cargo.toml
src/crates/cacher/src/: actor.rs  cacher.rs  lib.rs  mw.rs  values.rs
src/crates/loader/: Cargo.toml
src/crates/loader/resources/: test.docx
src/crates/loader/src/: file_data.rs  file_kind.rs  lib.rs
src/crates/loader/src/parser/: docx_file_parser.rs  excel_file_parser.rs  pdf_file_parser.rs  text_file_parser.rs
src/crates/loader/test/: test.rs
src/crates/wrappers/: Cargo.toml
src/crates/wrappers/src/: bucket.rs  cluster.rs  document.rs  file_form.rs  folder.rs  lang_chain.rs  lib.rs  s_params.rs  schema.rs  scroll.rs  search_params.rs
src/crates/wrappers/test/: test.rs
src/domain/: mod.rs
src/embeddings/: config.rs  errors.rs  mod.rs
src/endpoints/: buckets.rs  cluster.rs  clusters.rs  document.rs  documents.rs  folders.rs  hello.rs  loader.rs  mod.rs  paginator.rs  searcher.rs  similarities.rs  watcher.rs
src/engine/: error.rs  form.rs  mod.rs  model.rs
src/features/loader/: Cargo.toml
src/features/loader/resources/: file_1.txt  file_2.txt  file_3.txt  test.txt
src/features/loader/src/: file_kind.rs  lib.rs
src/features/loader/src/parser/: docx_file_parser.rs  excel_file_parser.rs  mod.rs  pdf_file_parser.rs
src/features/loader/test/: test.rs
src/forms/: cluster.rs  document.rs  folder.rs  mod.rs  pagination.rs  preview.rs  s_params.rs  schema.rs  scroll.rs
src/generic/: mod.rs
src/infrastructure/: config.rs  mod.rs
src/metrics/: endpoints.rs  mod.rs  prometheus.rs
src/middlewares/: logger.rs
src/orchestra/: endpoints.rs  forms.rs  mod.rs  models.rs
src/searcher/: endpoints.rs  errors.rs  forms.rs  mod.rs  models.rs  service_client.rs
src/server/: config.rs  error.rs  errors.rs  mod.rs  swagger.rs
src/service/: init.rs  mod.rs
src/services/: cacher.rs  config.rs  init.rs  mod.rs  searcher.rs  service.rs
src/storage/: documents.rs  endpoints.rs  errors.rs  folders.rs  forms.rs  mod.rs  (+1 more)
static/: index.html
test/: elastic.rs
tests/: test_cacher.rs  test_osearch.rs  test_searcher_extractor.rs
(+430 files in other folders)
