[package]
name = "doc-search"
version = "0.4.0"
edition = "2021"

[badges]
maintenance = { status = "actively-developed" }

[profile.release]
lto = true
panic = "abort"
strip = "debuginfo"

[workspace]
members = [
    ".",
    "doc-search-core",
    "doc-search-otlp",
]

[dev-dependencies]
rstest = "0.26.1"
serial_test = "3.2.0"

[dependencies]
anyhow = "1.0.96"
axum-prometheus = "0.9.0"
axum-tracing-opentelemetry = "0.26.1"
config = "0.15.19"
derive_builder = "0.20.2"
dotenv = "0.15.0"
gset = "1.1.0"
serde_derive = "1.0.218"
serde_json = "1.0.139"
thiserror = "2.0.11"
tracing = "0.1.41"

[dependencies.axum]
version = "0.8.1"
features = ["tracing", "tower-log"]

[dependencies.chrono]
version = "0.4.37"
features = ["serde"]

[dependencies.serde]
version = "1.0.218"
features = ["derive"]

[dependencies.tokio]
version = "1.43.0"
features = ["full"]

[dependencies.tower-http]
version = "0.6.2"
features = ["trace", "cors", "add-extension", "propagate-header"]

[dependencies.utoipa]
version = "5.3.1"
features = ["axum_extras", "chrono"]

[dependencies.utoipa-swagger-ui]
version = "9.0.0"
features = ["axum", "vendored"]

[dependencies.doc-search-core]
path = "doc-search-core"

[dependencies.doc-search-otlp]
path = "doc-search-otlp"

[[bin]]
name = "launch"
path = "src/bin/launch.rs"

[[bin]]
name = "init-infrastructure"
path = "src/bin/init-infrastructure.rs"
