[package]
name = "doc-search-core"
version = "0.1.0"
edition = "2024"

[badges]
maintenance = { status = "actively-developed" }

[features]
enable-unique-doc-id = ["dep:md5"]
support-opensearch-v3 = []
default = []

[dev-dependencies]
rstest = "0.26.1"
mockall = "0.14.0"

[dependencies]
anyhow = "1.0.96"
async-trait = "0.1.86"
character_text_splitter = "0.1.3"
derive_builder = "0.20.0"
gset = "1.1.0"
opensearch = "2.3.0"
serde_derive = "1.0.218"
serde_json = "1.0.139"
thiserror = "2.0.11"
tracing = "0.1.41"

[dependencies.reqwest]
version = "0.12.12"
features = ["json", "multipart"]

[dependencies.serde]
version = "1.0.218"
features = ["derive"]

[dependencies.tokio]
version = "1.43.0"
features = ["full"]

[dependencies.uuid]
version = "1.15.0"
features = ["v4"]

[dependencies.md5]
optional = true
version = "0.7.0"
