[package]
name = "doc-search-otlp"
version = "0.1.0"
edition = "2024"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
anyhow = "1.0.96"
gset = "1.1.0"
opentelemetry = "0.31.0"
regex = "1.11.1"
serde_derive = "1.0.218"
tracing = "0.1.41"
tracing-opentelemetry = "0.32.0"

[dependencies.axum]
version = "0.8.1"
features = ["tracing", "tower-log"]

[dependencies.opentelemetry-appender-log]
version = "0.31.0"

[dependencies.opentelemetry-otlp]
version = "0.31.0"
features = ["grpc-tonic", "logs"]

[dependencies.opentelemetry_sdk]
version = "0.31.0"
features = ["rt-tokio-current-thread", "logs"]

[dependencies.serde]
version = "1.0.218"
features = ["derive"]

[dependencies.tokio]
version = "1.43.0"
features = ["full"]

[dependencies.tracing-subscriber]
version = "0.3.20"
features = ["env-filter", "json"]

[dependencies.tower-http]
version = "0.6.2"
features = ["trace", "cors", "add-extension", "propagate-header"]
