[package]
name = "own-doc-search"
version = "0.1.0"
edition = "2021"

[features]
default = []
enable-dotenv   = ["dep:dotenv"]

[dependencies]
actix = "^0.13"
actix-web = "^4.3"
anyhow = "^1.0"
doc-search = { path = "../../" }

# There is optional crate that needed by selected features.
[dependencies.dotenv]
version = "^0.15"
optional = true

[[bin]]
name = "own-main"
path = "src/bin/main.rs"
