[package]
name = "cacher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
async-trait = "^0.1"
derive_builder = "^0.12"
chrono = { version = "0.4.33", features = ["rustc-serialize", "serde"] }
futures-util = "0.3.30"
redis = { version = "0.22", features = ["aio", "tokio-comp"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "^1.0"
thiserror = "1.0.56"
tokio = { version = "^1.32", features = ["full"] }
