[package]
name = "cacher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "^0.13"
actix_derive = "^0.6"
actix-rt = "^2.9"
anyhow = "^1.0"
async-trait = "^0.1"
futures-util = "^0.3"
serde_json = "^1.0"
thiserror = "^1.0"

wrappers = { path = "../wrappers" }

[dependencies.redis]
version = "^0.24"
features = ["aio", "tokio-comp", "connection-manager"]

[dependencies.serde]
version = "^1.0"
features = ["derive"]

[dependencies.tokio]
version = "^1.36"
features = ["full"]
