[package]
name = "loader"
version = "0.1.0"
edition = "2021"

[features]
docx = []
excel = []
pdf = []
video = []
audio = []
image = []
default = []

[dependencies]
chrono = "^0.4"
derive_builder = "^0.12"
docx = "^1.1"
dotenv = "^0.15"
office = "^0.8"
lopdf = "^0.31"
pdfium-render = "^0.8"
tesseract = "^0.15"
walkdir = "^2.4"

hasher = { path = "../hasher" }
wrappers = { path = "../wrappers" }

[dependencies.text-splitter]
version = "^0.6"
features = ["tokenizers"]

[[test]]
name = "test"
path = "test/test.rs"
