[package]
name = "loader"
version = "0.1.0"
edition = "2021"

[features]
enable-docx    = ["dep:docx"]
enable-excel   = ["dep:office"]
enable-pdf     = ["dep:lopdf", "dep:pdfium-render", "dep:tesseract"]
enable-video   = []
enable-audio   = []
enable-image   = []

default = []

[dependencies]
chrono = "^0.4"
derive_builder = "^0.12"
dotenv = "^0.15"
log = "^0.4"
walkdir = "^2.4"

hasher = { path = "../hasher" }
wrappers = { path = "../wrappers" }

[dependencies.text-splitter]
version = "^0.6"
features = ["tokenizers"]

[dependencies.docx]
version = "^1.1"
optional = true

[dependencies.office]
version = "^0.8"
optional = true

[dependencies.lopdf]
version = "^0.31"
optional = true

[dependencies.pdfium-render]
version = "^0.8"
optional = true

[dependencies.tesseract]
version = "^0.15"
optional = true

[[test]]
name = "test"
path = "test/test.rs"
